<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    
    <TextView
        android:id="@+id/match_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/match_number"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="30dp"
        android:text="@string/match_number_label"
        android:textSize="24sp" />

    <TextView
        android:id="@id/match_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@id/match_number_label"
        android:text="999"
        android:textSize="44sp" />

    <TextView
        android:id="@+id/team_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/team_number"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/match_number"
        android:text="@string/team_number_label"
        android:textSize="24sp" />

    <TextView
        android:id="@id/team_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@id/team_number_label"
        android:text="9999"
        android:textSize="44sp" />

    <TextView
        android:id="@+id/alliance_color_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/alliance_color"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/team_number"
        android:text="@string/alliance_color_label"
        android:textSize="24sp" />

    <TextView
        android:id="@id/alliance_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@id/alliance_color_label"
        android:text="Red"
        android:textSize="44sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_below="@id/match_number"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

</RelativeLayout>
